; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_catalog.c_ts_catalog_delete_tid.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_catalog.c_ts_catalog_delete_tid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CMD_DELETE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ts_catalog_delete_tid(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @CatalogTupleDelete(i32 %5, i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @RelationGetRelid(i32 %8)
  %10 = load i32, i32* @CMD_DELETE, align 4
  %11 = call i32 @ts_catalog_invalidate_cache(i32 %9, i32 %10)
  %12 = call i32 (...) @CommandCounterIncrement()
  ret void
}

declare dso_local i32 @CatalogTupleDelete(i32, i32) #1

declare dso_local i32 @ts_catalog_invalidate_cache(i32, i32) #1

declare dso_local i32 @RelationGetRelid(i32) #1

declare dso_local i32 @CommandCounterIncrement(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
